--- a/_dev/templates/index.pug
+++ b/_dev/templates/index.pug
@@ -6,5 +6,5 @@ html(lang="ru")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     title Rizdvo
     link(rel="stylesheet" href="css/main.min.css")
-  body 
-    h1 Hello World
+  body
+    include sections/header
