--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/normalize.scss/normalize.scss";
+@import "../../node_modules/font-awesome/scss/font-awesome.scss";
 @import "global/fonts.scss";
 @import "global/vars.scss";
 @import "global/common.scss";
@@ -6,9 +7,3 @@
 @import "global/sprite.scss";
 @import "sections/header.scss";
 @import "sections/footer.scss";
-
-body {
-	font-family: $ff-main;
-	font-size: 1rem;
-	line-height: 1.2;
-}
