--- a/_dev/sass/global/vars.scss
+++ b/_dev/sass/global/vars.scss
@@ -1,6 +1,6 @@
 // Fonts
 
-$ff-main: 'Comfortaa';
-$ff-main-bold: 'Comfortaabold';
-$ff-main-light: 'Comfortaalight';
-$ff-heaging: 'Lobster';
+$ff-main: 'Comfortaa', Arial, sans-serif;
+$ff-main-bold: 'Comfortaabold', Arial, sans-serif;
+$ff-main-light: 'Comfortaalight', Arial, sans-serif;
+$ff-heading: 'Lobster', Arial, sans-serif;
