--- a/_dev/templates/index.pug
+++ b/_dev/templates/index.pug
@@ -8,3 +8,7 @@ html(lang="ru")
     link(rel="stylesheet" href="css/main.min.css")
   body
     include sections/header
+
+    main
+
+    include sections/footer
