--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -7,3 +7,11 @@
 @import "global/sprite.scss";
 @import "sections/header.scss";
 @import "sections/footer.scss";
+@import "sections/homepage-slider.scss";
+@import "sections/vertical-menu.scss";
+@import "sections/advantages.scss";
+@import "sections/hits.scss";
+@import "sections/bestsell.scss";
+@import "sections/quality.scss";
+@import "sections/reviews.scss";
+@import "sections/about-store.scss";
