--- a/_dev/templates/sections/footer.pug
+++ b/_dev/templates/sections/footer.pug
@@ -68,11 +68,10 @@ footer.footer
 
                     address.address
                         a.address__mail-link(href="mailto:info@rizdvo.com.ua") info@rizdvo.com.ua
-                        <br>
                         a.address__office(href="https://goo.gl/maps/DB7XjmfqAgH2") г.&nbsp;Днепр, пр.&nbsp;Слобожанський,&nbsp;44,&nbsp;оф.211
     .footer__bottom
         .container
             p: img(src="" alt="")
             p Фабрика &laquo;Різдво&raquo;&nbsp;&mdash; избавит Вас от&nbsp;множества новогодних проблем на&nbsp;долгие годы! Купите рождественскую искусственную елку прямо сейчас с&nbsp;доставкой в&nbsp;Киев, Харьков, Одессу, Днепропетровск, Павлоград, Запорожье, Житомир, Донецк, Луцк, Львов, Новомосковск, Кривой&nbsp;Рог, Днепродзержинск и&nbsp;другие города Украины.
             p.copyright &copy;&nbsp;Все права защищены Рiздво&trade; 2018
-            p.developers: a(href="http://dev.prestashop-freelance.com/") Наша: Веб-студия
+            p.developers: a.developers__link(href="http://dev.prestashop-freelance.com/") Наша: Веб-студия
