--- a/_dev/sass/global/base.scss
+++ b/_dev/sass/global/base.scss
@@ -11,12 +11,39 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	min-height: 100%;
 	min-width: 320px;
 	font-size: 1rem;
 	font-family: $ff-main;
 	line-height: 1.2;
+	background: url(../img/bg-snow.png) repeat center, linear-gradient(135deg, #58050b 0%,#bd1723 51%,#58050b 100%) fixed;
 }
 
 main {
 	flex: 1 0 auto;
+}
+
+.home {
+	&__top {
+
+		&-inner {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			margin: 0 -10px;
+		}
+
+		&-left {
+			flex-basis: auto;
+			width: calc(100% / 4);
+			padding: 0 10px;
+		}
+
+		&-right {
+			flex-basis: auto;
+			width: calc(100% / 4 * 3);
+			padding: 0 10px;
+		}
+	}
 }
