--- a/_dev/sass/sections/header.scss
+++ b/_dev/sass/sections/header.scss
@@ -1,5 +1,4 @@
 .header {
-	background: url(../img/bg-snow.png) repeat center, linear-gradient(135deg, #58050b 0%,#bd1723 51%,#58050b 100%);
 
 	&__top {
 		display: flex;
@@ -215,6 +214,7 @@
 .nav {
 
 	&__list {
+		position: relative;
 		@include unstyled-list;
 	}
 
@@ -226,19 +226,63 @@
 		&:last-child {
 			margin-right: 0;
 		}
+
+		&:hover .nav__sublist {
+			display: block;
+		}
 	}
 
 	&__sublist {
+		@include unstyled-list;
+
+		position: absolute;
+		left: 0;
+		top: 30px;
+		z-index: 2;
 		display: none;
+		border: 2px solid #d2b467;
+		border-radius: 10px;
+		background-color: #fff;
+		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+		overflow: hidden;
+		transition: all 0.4s linear;
 	}
 
 	&__link {
+		padding: 10px 0;
 		font: normal 1.375rem/1 $ff-heading;
 		color: #f7e2df;
 		text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.75);
 
 		&:hover {
 			color: #fff;
+		}
+	}
+
+	&__subitem {
+
+		&:after {
+		    content: "";
+		    display: block;
+		    height: 1px;
+		    background-image: linear-gradient(to right, #c78644, #e0c57e 48%, #b28d32);
+		}
+
+		&:last-child:after {
+			display: none;
+		}
+
+	}
+
+	&__sublink {
+		display: block;
+		padding: 15px 20px;
+		font: normal 1rem/1.3 $ff-main-bold;
+		color: #444;
+
+		&:hover {
+			color: #fff;
+			background: #005f27;
 		}
 	}
 
@@ -256,7 +300,7 @@
 
 	&__heading {
 		margin: 0;
-		font: normal 0.875rem/1.4 $ff-main-light;
+		font: normal 0.875rem/1.2 $ff-main-light;
 		color: #8a090f;
 		text-align: center;
 		transform: translateY(-85px);
@@ -293,21 +337,37 @@
 
 .search {
 
+	display: flex;
+	justify-content: flex-end;
+
 	&__form {
 		position: relative;
 		display: inline-block;
 	}
 
 	&__input {
+		box-sizing: content-box;
 		height: 30px;
 		width: 245px;
 		padding: 0 30px 0 10px;
+		color: #333;
 		border: 1px solid #fff;
 		outline: none;
 		background-color: #fff;
+		transition: 0.3s ease-in;
+
+		@include placeholder {
+			color: rgba(30, 30, 30, 0.8);
+		    text-indent: 0px;
+		    transition: text-indent 0.4s linear;
+		};
 
 		&:focus {
 			border-color: #1a8954;
+
+		    @include placeholder {
+		    	text-indent: 500px;
+		    }
 		}
 	}
 
