category and product added

--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -15,3 +15,17 @@
 @import "sections/quality.scss";
 @import "sections/reviews.scss";
 @import "sections/about-store.scss";
+@import "sections/breadcrumbs.scss";
+@import "sections/category.scss";
+@import "sections/block-categories.scss";
+@import "sections/advanced-search.scss";
+@import "sections/filtered-page.scss";
+@import "sections/subcategory.scss";
+@import "sections/hits-of-sales.scss";
+@import "sections/product-card.scss";
+@import "sections/product-list.scss";
+@import "sections/product.scss";
+@import "sections/oneclickcheckout.scss";
+@import "sections/warnings.scss";
+@import "sections/delivery.scss";
+@import "sections/product-options.scss";
