--- a/_dev/sass/global/common.scss
+++ b/_dev/sass/global/common.scss
@@ -32,6 +32,16 @@ a {
 	transition: 0.2s ease-in;
 }
 
+ul {
+	margin: 0;
+	list-style-type: square;
+}
+
+li {
+	font: normal 0.875rem/1.5 $ff-main-light;
+	color: #777;
+}
+
 .container {
 	max-width: 1140px;
 	margin-left: auto;
@@ -42,6 +52,50 @@ a {
 
 .container {
 	padding: 0;
+}
+
+.btn {
+	display: block;
+	padding: 10px 20px;
+	font: normal 0.75rem/1.3 $ff-main;
+	text-transform: uppercase;
+	border: none;
+	border-radius: 3px;
+	background: #fff;
+	transition: .3s linear;
+}
+
+.btn--centered {
+	margin: 0 auto;
+}
+
+.btn--red {
+	background: rgba(234, 38, 36, .8);
+	color: #fff;
+
+	&:hover {
+		background: rgba(234, 38, 36, 1);
+	}
+}
+
+.btn--green {
+	background: rgba(26, 163, 82, 0.8);
+	color: #fff;
+
+	&:hover {
+		background: rgba(26, 163, 82, 1);
+	}
+}
+
+.btn--product {
+	height: 40px;
+	width: 180px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.btn--disabled {
+	opacity: .3;
 }
 
 @mixin unstyled-list() {
@@ -66,6 +120,10 @@ a {
 
 @mixin ribbon-heading() {
 	background: url(../img/heading_ribbon.svg) no-repeat center/contain;
+}
+
+@mixin ribbon-heading-green() {
+	background: url(../img/heading_ribbon-green.svg) no-repeat center/contain;
 }
 
 @mixin placeholder() {
