--- a/_dev/templates/sections/header.pug
+++ b/_dev/templates/sections/header.pug
@@ -1,94 +1,110 @@
-header.header
-    canvas#snowfall
-    .container
-        .header__top
-
-            .header__top-left
-
-                .header-links
-                    ul.header-links__list
-                        - var values = ['Распродажа', 'Обмен и возврат', 'Сотрудничество', 'О Нас'];
-                            each val in values
-                                li.header-links__item
-                                    a.header-links__link(href="#")= val
-
-            .header__top-right
-
-                .header-contacts
-                    a.header-contacts__link(href="tel:+380679858500") +38&nbsp;(067)&nbsp;985&ndash;85&ndash;00
-                    ul.header-contacts__list
-                        li.header-contacts__item
-                            a.header-contacts__link(href="tel:+380679858500")
-                                img.header-contacts__icon(src="img/ks_logo.svg" width="30" height="30" alt="")
-                                | +38&nbsp;(067)&nbsp;985&ndash;85&ndash;00
-                        li.header-contacts__item
-                            a.header-contacts__link(href="tel:+380509125257")
-                                img.header-contacts__icon(src="img/vodafone_logo.svg" width="30" height="30" alt="")
-                                | +38&nbsp;(050)&nbsp;912&ndash;52&ndash;57
-                        li.header-contacts__item
-                            p.work-hours
-                                | с&nbsp;8:00 до&nbsp;20:00 (Пн&ndash;Пт) <br>
-                                | с&nbsp;9:00 до&nbsp;15:00 (СБ&ndash;Вс)
-
-                .languages
-                    ul.languages__list
-                        li.languages__item.selected
-                            a.languages__link(href="#")
-                                img.languages__flag(src="img/ru.svg" alt="" width="30" height="30")
-                        li.languages__item
-                            a.languages__link(href="#")
-                                img.languages__flag(src="img/ua.svg" alt="" width="30" height="30")
-
-                .user-info
-                    a.user-info__link(href="#")
-                        img(src="img/user.svg", alt="" width="40")
-
-                .cart
-                    img(src="img/giftbox.svg" alt="" width="60")
-
-    .header__center
+doctype html
+html(lang="ru")
+  head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    title Rizdvo
+    link(rel="stylesheet" href="css/main.min.css")
+    //- link(rel="stylesheet" href="js/owlcarousel/owl.carousel.min.css")
+    //- link(rel="stylesheet" href="js/owlcarousel/owl.theme.default.min.css")
+  body
+    header.header
+        canvas#snowfall
         .container
-            .header__center-inner
-                nav.nav
-                    ul.nav__list
-                        li.nav__item
-                            a.nav__link(href="#") Елки
-                            ul.nav__sublist
-                                li.nav__subitem
-                                    a.nav__sublink(href="#") Классика
-                                li.nav__subitem
-                                    a.nav__sublink(href="#") Литая Люкс
-                                li.nav__subitem
-                                    a.nav__sublink(href="#") Литая Премиум
-                                li.nav__subitem
-                                    a.nav__sublink(href="#") Литая Голубая Элит
-                        li.nav__item
-                            a.nav__link(href="#") Сосны
-                        li.nav__item
-                            a.nav__link(href="#") Уличные
-                        li.nav__item
-                            a.nav__link(href="#") Аксессуары
+            .header__top
 
-                .logo
-                    a.logo__link(href="#")
-                        img(src="img/logo.svg" alt="" width="260" height="240")
-                        h1.logo__heading
-                            | Интернет магазин
-                            <br>
-                            | искусственных елок
+                .header__top-left
 
-                .header-menu
-                    ul.header-menu__list
-                        li.header-menu__item
-                            a.header-menu__link(href="#") Блог
-                        li.header-menu__item
-                            a.header-menu__link(href="#") Доставка
-                        li.header-menu__item
-                            a.header-menu__link(href="#") Контакты
+                    .header-links
+                        ul.header-links__list
+                            - var values = ['Распродажа', 'Обмен и возврат', 'Сотрудничество', 'О Нас'];
+                                each val in values
+                                    li.header-links__item
+                                        a(href="#" class="header-links__link")= val
 
-    .header__bottom
-        .container
-            .search
-                form(action="#" class="search__form")
-                    input(type="search" class="search__input" placeholder="Поиск")
-                    button(type="submit" class="search__btn"): i.fa.fa-search(aria-hidden="true")
+                .header__top-right
+
+                    .header-contacts
+                        a.header-contacts__link(href="tel:+380679858500") +38&nbsp;(067)&nbsp;985&ndash;85&ndash;00
+                        ul.header-contacts__list
+                            li.header-contacts__item
+                                a.header-contacts__link(href="tel:+380679858500")
+                                    img.header-contacts__icon(src="img/ks_logo.svg" width="30" height="30" alt="")
+                                    | +38&nbsp;(067)&nbsp;985&ndash;85&ndash;00
+                            li.header-contacts__item
+                                a.header-contacts__link(href="tel:+380509125257")
+                                    img.header-contacts__icon(src="img/vodafone_logo.svg" width="30" height="30" alt="")
+                                    | +38&nbsp;(050)&nbsp;912&ndash;52&ndash;57
+                            li.header-contacts__item
+                                p.work-hours
+                                    | с&nbsp;8:00 до&nbsp;20:00 (Пн&ndash;Пт) <br>
+                                    | с&nbsp;9:00 до&nbsp;15:00 (СБ&ndash;Вс)
+
+                    .languages
+                        ul.languages__list
+                            li.languages__item.selected
+                                a.languages__link(href="#")
+                                    img.languages__flag(src="img/ru.svg" alt="" width="30" height="30")
+                            li.languages__item
+                                a.languages__link(href="#")
+                                    img.languages__flag(src="img/ua.svg" alt="" width="30" height="30")
+
+                    .user-info
+                        a.user-info__link(href="#")
+                            img(src="img/user.svg", alt="" width="40")
+
+                    .cart
+                        img(src="img/giftbox.svg" alt="" width="60")
+
+        .header__center
+            .container
+                .header__center-inner
+                    nav.nav
+                        ul.nav__list
+                            li.nav__item
+                                a.nav__link(href="category.html") Елки
+                                ul.nav__sublist
+                                    li.nav__subitem
+                                        a.nav__sublink(href="#") Классика
+                                    li.nav__subitem
+                                        a.nav__sublink(href="#") Литая Люкс
+                                    li.nav__subitem
+                                        a.nav__sublink(href="#") Литая Премиум
+                                    li.nav__subitem
+                                        a.nav__sublink(href="#") Литая Голубая Элит
+                            li.nav__item
+                                a.nav__link(href="category.html") Сосны
+                            li.nav__item
+                                a.nav__link(href="category.html") Уличные
+                            li.nav__item
+                                a.nav__link(href="category.html") Аксессуары
+
+                    .logo
+                        a.logo__link(href="index.html")
+                            img(src="img/logo.svg" alt="" width="260" height="240")
+                            h1.logo__heading
+                                | Интернет магазин
+                                <br>
+                                | искусственных елок
+
+                    .header-menu
+                        ul.header-menu__list
+                            li.header-menu__item
+                                a.header-menu__link(href="#") Блог
+                            li.header-menu__item
+                                a.header-menu__link(href="#") Доставка
+                            li.header-menu__item
+                                a.header-menu__link(href="#") Контакты
+
+        .header__bottom
+            .container
+
+                .header__bottom-inner
+
+                    include breadcrumbs
+
+                    .search
+                        form(action="#" class="search__form")
+                            input(type="search" class="search__input" placeholder="Поиск")
+                            button(type="submit" class="search__btn"): i.fa.fa-search(aria-hidden="true")
