--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -29,3 +29,9 @@
 @import "sections/warnings.scss";
 @import "sections/delivery.scss";
 @import "sections/product-options.scss";
+@import "sections/blog.scss";
+@import "sections/blog-meta-panel.scss";
+@import "sections/blog-share.scss";
+@import "sections/post.scss";
+@import "sections/category-card.scss";
+@import "sections/comments.scss";
