--- a/_dev/sass/sections/warnings.scss
+++ b/_dev/sass/sections/warnings.scss
@@ -14,4 +14,10 @@
 		border-color: rgba(228, 117, 43, 1);
 		background: rgba(228, 117, 43, .9);
 	}
+
+	&--red {
+		color: #fff;
+		border-color: rgba(230, 90, 89, 1);
+		background: rgba(230, 90, 89, .9);
+	}
 }
