--- a/_dev/templates/category.pug
+++ b/_dev/templates/category.pug
@@ -2,7 +2,7 @@ include sections/header
 
 main.category
     .container
-        .category__heading Елки
+        .main-heading.main-heading--green Елки
         .category__top
             .category__top-inner
                 .category__top-left
@@ -18,7 +18,7 @@ main.category
     include sections/hits-of-sales
     .category__description
         .container
-            .category__description-heading Особенности
+            .main-heading Особенности
             .category__description-inner
                 h1 5&nbsp;ПРИЧИН КУПИТЬ ИСКУССТВЕННУЮ ЕЛКУ
                 p Новый Год &laquo;на&nbsp;носу&raquo; и&nbsp;все мы&nbsp;стремимся купить красивую новогоднюю елку, чтобы создать в&nbsp;доме настоящую праздничную атмосферу. Но&nbsp;что делать, если хочется праздника, а&nbsp;губить живое деревце, из&nbsp;которого могла&nbsp;бы вырасти настоящая лесная красавица, не&nbsp;поднимается рука? Что делать, если не&nbsp;хочется тратить деньги на&nbsp;покупку елки каждый год? Или&nbsp;&mdash; для Вас проблематично везти объемную елку в&nbsp;общественном транспорте, Вы&nbsp;не&nbsp;любите убирать осыпавшуюся хвою, да&nbsp;к&nbsp;тому&nbsp;же выбрать красивую, симметричную елку также составляет проблему? Интернет-магазин &laquo;Різдво&raquo; предлагает отличное решение всех проблем: искусственная елка станет настоящим новогодним украшением, которое, к&nbsp;тому&nbsp;же, имеет массу преимуществ. Итак, 5&nbsp;преимуществ искусственных ёлок:
