--- a/_dev/templates/product.pug
+++ b/_dev/templates/product.pug
@@ -107,7 +107,7 @@ main.product
                         p.product__reviews-comment Вчера получили елочку, очень красивая.Покупкой остались довольны,рекомендуем.Спасибо сайту за работу!
 
         .product__video
-            p.product__video-heading Видео
+            p.main-heading.main-heading--green Видео
             iframe.product__video-iframe(width="1140" height="600" src="https://www.youtube.com/embed/mPw_aw_Dwjs" allowfullscreen)
 
         .product__current-category
