--- a/_dev/templates/sections/about-store.pug
+++ b/_dev/templates/sections/about-store.pug
@@ -1,6 +1,6 @@
 .about-store
     .container
-        p.about-store__heading О нашем магазине
+        p.main-heading О нашем магазине
         .about-store__inner
             .about-store__top
                 .about-store__video-wrap
