--- a/_dev/templates/sections/bestsell.pug
+++ b/_dev/templates/sections/bestsell.pug
@@ -1,6 +1,6 @@
 .bestsell
     .container
-        p.bestsell__heading Аксессуары
+        p.main-heading Аксессуары
         ul.bestsell__list
             li.bestsell__item
                 .bestsell__cover
