--- a/_dev/templates/sections/header.pug
+++ b/_dev/templates/sections/header.pug
@@ -91,7 +91,7 @@ html(lang="ru")
                     .header-menu
                         ul.header-menu__list
                             li.header-menu__item
-                                a.header-menu__link(href="#") Блог
+                                a.header-menu__link(href="blog.html") Блог
                             li.header-menu__item
                                 a.header-menu__link(href="#") Доставка
                             li.header-menu__item
