--- a/_dev/templates/sections/hits.pug
+++ b/_dev/templates/sections/hits.pug
@@ -1,6 +1,6 @@
 .hits
     .container
-        p.hits__heading Искуственные Елки и Сосны
+        p.main-heading Искуственные Елки и Сосны
         ul.hits__list
             li.hits__item
                 .hits__cover
