--- a/_dev/templates/sections/quality.pug
+++ b/_dev/templates/sections/quality.pug
@@ -1,6 +1,6 @@
 .quality
     .container
-        p.quality__heading Особености наших елок
+        p.main-heading Особености наших елок
         ul.quality__list
             li.quality__item
                 img(src="img/features_ico_1.png" class="quality__icon" alt="")
