--- a/_dev/templates/sections/reviews.pug
+++ b/_dev/templates/sections/reviews.pug
@@ -1,6 +1,6 @@
 .reviews
     .container
-        p.reviews__heading Отзывы покупателей
+        p.main-heading Отзывы покупателей
         ul.reviews__list
             li.reviews__item
                 .reviews__item-inner
