--- a/_dev/templates/sections/warnings.pug
+++ b/_dev/templates/sections/warnings.pug
@@ -1,2 +1,6 @@
 .warnings.warnings--last-quantities
     p Внимание: ограниченное количество товара в наличии!
+.warnings.warnings--red
+    p Нет комментариев на данный момент
+.warnings.warnings--red
+    p Только зарегистрированные и авторизованные пользователи могут добавлять комментарии
