--- a/_dev/sass/global/common.scss
+++ b/_dev/sass/global/common.scss
@@ -1,5 +1,40 @@
 // Styles for main tags
 
+@mixin unstyled-list() {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+@mixin flex-list() {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	margin: 0 -15px;
+}
+
+@mixin flex-item-row($item_in_row) {
+	flex-basis: auto;
+	width: 100% / $item_in_row;
+	padding: 0 15px;
+}
+
+@mixin ribbon-heading() {
+	background: url(../img/heading_ribbon.svg) no-repeat center/contain;
+}
+
+@mixin ribbon-heading-green() {
+	background: url(../img/heading_ribbon-green.svg) no-repeat center/contain;
+}
+
+@mixin placeholder() {
+  &::-webkit-input-placeholder { @content; }
+  &:-moz-placeholder           { @content; }
+  &::-moz-placeholder          { @content; }
+  &:-ms-input-placeholder      { @content; }
+}
+
 h1 {
 	font-size: 40px;
 }
@@ -39,7 +74,22 @@ ul {
 
 li {
 	font: normal 0.875rem/1.5 $ff-main-light;
-	color: #777;
+}
+
+.main-heading {
+	@include ribbon-heading;
+
+	min-height: 80px;
+	margin: 0 0 30px;
+	padding: 5px 0;
+	font: normal 2.5rem/1.3 $ff-heading;
+	color: #fff;
+	text-align: center;
+	text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.75);
+}
+
+.main-heading--green {
+	@include ribbon-heading-green;
 }
 
 .container {
@@ -58,77 +108,135 @@ li {
 	display: block;
 	padding: 10px 20px;
 	font: normal 0.75rem/1.3 $ff-main;
+	text-align: center;
 	text-transform: uppercase;
 	border: none;
 	border-radius: 3px;
 	background: #fff;
 	transition: .3s linear;
-}
 
-.btn--centered {
-	margin: 0 auto;
-}
-
-.btn--red {
-	background: rgba(234, 38, 36, .8);
-	color: #fff;
-
-	&:hover {
-		background: rgba(234, 38, 36, 1);
+	&--centered {
+		margin: 0 auto;
 	}
-}
 
-.btn--green {
-	background: rgba(26, 163, 82, 0.8);
-	color: #fff;
-
-	&:hover {
-		background: rgba(26, 163, 82, 1);
+	&--right {
+		margin-left: auto;
 	}
-}
 
-.btn--product {
-	height: 40px;
-	width: 180px;
-	white-space: nowrap;
-	overflow: hidden;
-}
+	&--red {
+		background: rgba(234, 38, 36, .8);
+		color: #fff;
 
-.btn--disabled {
-	opacity: .3;
-}
+		&:hover {
+			background: rgba(234, 38, 36, 1);
+		}
+	}
 
-@mixin unstyled-list() {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-}
+	&--green {
+		background: rgba(26, 163, 82, 0.8);
+		color: #fff;
 
-@mixin flex-list() {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	margin: 0 -15px;
-}
+		&:hover {
+			background: rgba(26, 163, 82, 1);
+		}
+	}
 
-@mixin flex-item-row($item_in_row) {
-	flex-basis: auto;
-	width: 100% / $item_in_row;
-	padding: 0 15px;
-}
+	&--product {
+		height: 40px;
+		width: 180px;
+		line-height: 20px;
+		white-space: nowrap;
+		overflow: hidden;
+	}
 
-@mixin ribbon-heading() {
-	background: url(../img/heading_ribbon.svg) no-repeat center/contain;
-}
+	&--social {
+		padding: 5px 10px;
+		font: normal 0.75rem/1.2 $ff-main;
+		text-align: left;
+		text-transform: initial;
+		white-space: nowrap;
 
-@mixin ribbon-heading-green() {
-	background: url(../img/heading_ribbon-green.svg) no-repeat center/contain;
-}
+		span {
+			display: inline-block;
+			margin-left: 10px;
+			text-align: left;
+			vertical-align: middle;
+			transition: .3s linear;
+		}
 
-@mixin placeholder() {
-  &::-webkit-input-placeholder { @content; }
-  &:-moz-placeholder           { @content; }
-  &::-moz-placeholder          { @content; }
-  &:-ms-input-placeholder      { @content; }
+		&:before {
+			content: "";
+			display: inline-block;
+			font-size: 1rem;
+			font-family: "FontAwesome";
+			color: #fff;
+			vertical-align: middle;
+			transition: .3s linear;
+		}
+
+		&:hover {
+
+			span {
+				letter-spacing: 0.1em;
+			}
+		}
+
+	}
+
+	&--twitter {
+		background: #00aaf0;
+
+		&:before {
+			content: "\f099";
+		}
+
+		&:hover {
+			background: #00aaf0;
+		}
+
+	}
+
+	&--facebook {
+		background: #435f9f;
+
+		&:before {
+			content: "\f09a";
+		}
+
+		&:hover {
+			background: #435f9f;
+		}
+
+	}
+
+	&--google-plus {
+		background: #e04b34;
+
+		&:before {
+			content: "\f0d5";
+		}
+
+		&:hover {
+			background: #e04b34;
+		}
+
+	}
+
+	&--pinterest {
+		background: #ce1f21;
+
+		&:before {
+			content: "\f0d2";
+		}
+
+		&:hover {
+			background: #ce1f21;
+		}
+
+	}
+
+	&--disabled {
+		opacity: .3;
+	}
+
 }
