--- a/_dev/sass/sections/product.scss
+++ b/_dev/sass/sections/product.scss
@@ -211,6 +211,7 @@
 
 		li {
 			padding-bottom: 10px;
+			color: #777;
 		}
 	}
 
@@ -338,18 +339,6 @@
 
 	&__video {
 		padding: 30px 0;
-
-		&-heading {
-			@include ribbon-heading-green;
-
-			min-height: 80px;
-			margin: 0 0 30px;
-			padding: 5px 0;
-			font: normal 2.5rem/1.3 $ff-heading;
-			color: #fff;
-			text-align: center;
-			text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.75);
-		}
 
 		&-iframe {
 			max-width: 100%;
