--- a/_dev/templates/blog.pug
+++ b/_dev/templates/blog.pug
@@ -1,24 +1,16 @@
 include sections/header
 
-main.home
-
-    .home__top
-        .container
-            .home__top-inner
-                .home__top-left
-                    include sections/vertical-menu
-                .home__top-right
-                    include sections/homepage-slider
-
-    include sections/advantages
-    include sections/hits
-    include sections/bestsell
-    include sections/quality
-    include sections/reviews
-    include sections/about-store
+main.blog
+    .container
+        p.main-heading.main-heading--green Обзоры
+        .blog__top
+            .blog__top-inner
+                .blog__top-left
+                    include sections/category-card
+                    include sections/category-card
+                    include sections/category-card
+                .blog__top-right
+                    include sections/post
+                    include sections/post
 
 include sections/footer
-
-//- script(src="https://code.jquery.com/jquery-3.3.1.min.js")
-//- script(src="js/owlcarousel/owl.carousel.min.js")
-//- script(src="js/common.js")
