--- a/_dev/templates/sections/hits-of-sales.pug
+++ b/_dev/templates/sections/hits-of-sales.pug
@@ -1,6 +1,6 @@
 .hits-of-sales
     .container
-        p.hits-of-sales__heading Хиты продаж
+        p.main-heading Хиты продаж
         ul.hits-of-sales__list
             li.hits-of-sales__item
                 include product-card
