--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -35,3 +35,4 @@
 @import "sections/post.scss";
 @import "sections/category-card.scss";
 @import "sections/comments.scss";
+@import "sections/authentication.scss";
