--- a/_dev/templates/sections/header.pug
+++ b/_dev/templates/sections/header.pug
@@ -51,7 +51,7 @@ html(lang="ru")
                                     img.languages__flag(src="img/ua.svg" alt="" width="30" height="30")
 
                     .user-info
-                        a.user-info__link(href="#")
+                        a.user-info__link(href="authentication.html")
                             img(src="img/user.svg", alt="" width="40")
 
                     .cart
